Переделаны интеграционные тесты сервисов, рефакторинг